attached_assets/Pasted--Configuring-done-0-1s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1737588980769.txt
-- Configuring done (0.1s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/build
[  9%] Built target dfs_crypto
[ 19%] Built target dfs_store
[ 23%] Building CXX object CMakeFiles/dfs_network.dir/src/network/codec.cpp.o
/home/runner/workspace/src/network/codec.cpp: In member function ‘std::size_t dfs::network::Codec::serialize(const dfs::network::MessageFrame&, std::ostream&)’:
/home/runner/workspace/src/network/codec.cpp:37:53: error: request for member ‘length’ in ‘frame.dfs::network::MessageFrame::source_id’, which is of non-class type ‘const uint8_t’ {aka ‘const unsigned char’}
   37 |         uint32_t source_id_length = frame.source_id.length();
      |                                                     ^~~~~~
/home/runner/workspace/src/network/codec.cpp:41:49: error: request for member ‘data’ in ‘frame.dfs::network::MessageFrame::source_id’, which is of non-class type ‘const uint8_t’ {aka ‘const unsigned char’}
   41 |             write_bytes(output, frame.source_id.data(), source_id_length);
      |                                                 ^~~~
/home/runner/workspace/src/network/codec.cpp: At global scope:
/home/runner/workspace/src/network/codec.cpp:79:14: error: no declaration matches ‘dfs::network::MessageFrame dfs::network::Codec::deserialize(std::istream&, dfs::network::Channel&, const std::string&)’
   79 | MessageFrame Codec::deserialize(std::istream& input, Channel& channel, const std::string& source_id) {
      |              ^~~~~
In file included from /home/runner/workspace/src/network/codec.cpp:1:
/home/runner/workspace/include/network/codec.hpp:22:18: note: candidate is: ‘dfs::network::MessageFrame dfs::network::Codec::deserialize(std::istream&)’
   22 |     MessageFrame deserialize(std::istream& input);
      |                  ^~~~~~~~~~~
/home/runner/workspace/include/network/codec.hpp:13:7: note: ‘class dfs::network::Codec’ defined here
   13 | class Codec {
      |       ^~~~~
make[2]: *** [CMakeFiles/dfs_network.dir/build.make:90: CMakeFiles/dfs_network.dir/src/network/codec.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:124: CMakeFiles/dfs_network.dir/all] Error 2
make: *** [Makefile:146: all] Error 2